--- a/TreeSpotter/war/WEB-INF/web.xml
+++ b/TreeSpotter/war/WEB-INF/web.xml
@@ -48,5 +48,33 @@
 			<role-name>admin</role-name>
 		</auth-constraint>
 	</security-constraint>
+	<filter>
+		<filter-name>appstats</filter-name>
+		<filter-class>com.google.appengine.tools.appstats.AppstatsFilter</filter-class>
+		<init-param>
+			<param-name>logMessage</param-name>
+			<param-value>Appstats available: /appstats/details?time={ID}</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>appstats</filter-name>
+		<url-pattern>/treespotter/*</url-pattern>
+	</filter-mapping>
+	<servlet>
+		<servlet-name>appstats</servlet-name>
+		<servlet-class>com.google.appengine.tools.appstats.AppstatsServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>appstats</servlet-name>
+		<url-pattern>/appstats/*</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>locationUpdateTask</servlet-name>
+		<servlet-class>com.cpsc310.treespotter.server.LocationProcessor</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>locationUpdateTask</servlet-name>
+		<url-pattern>/treespotter/tasks/streetblockupdate</url-pattern>
+	</servlet-mapping>
 
 </web-app>
