Import + Parsing is done. Servlet can be activated and updated Primary Key for TreeData

--- a/TreeSpotter/war/WEB-INF/web.xml
+++ b/TreeSpotter/war/WEB-INF/web.xml
@@ -20,6 +20,16 @@
 		<servlet-name>treeDataService</servlet-name>
 		<url-pattern>/treespotter/treedata</url-pattern>
 	</servlet-mapping>
+	
+  <servlet>
+    <servlet-name>importDataServlet</servlet-name>
+    <servlet-class>com.cpsc310.treespotter.server.DataFetcher</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>importDataServlet</servlet-name>
+    <url-pattern>/treespotter/import</url-pattern>
+  </servlet-mapping>
 
 	<!-- Default page to serve -->
 	<welcome-file-list>
