Fixed small bug in DataFetcher where it missed the last entries in a file. Made a data import test. Pointed the data Fetcher at the full data set.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ TreeSpotter/test-classes/
 TreeSpotter/war/WEB-INF/classes/
 TreeSpotter/war/WEB-INF/appengine-generated/
 TreeSpotter/war/WEB-INF/deploy/*
+TreeSpotter/.gwt/.gwt-log
 TreeSpotter/war/treespotter/*
 *.class
 *.prefs
