--- a/TreeSpotter/.classpath
+++ b/TreeSpotter/.classpath
@@ -11,5 +11,11 @@
 	<classpathentry kind="var" path="ECLIPSE_HOME/plugins/com.google.appengine.eclipse.sdkbundle_1.7.4/appengine-java-sdk-1.7.4/lib/impl/appengine-api-stubs.jar"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/objectify-4.0b1.jar" sourcepath="war/WEB-INF/lib/objectify-4.0b1-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/TreeSpotter/war/WEB-INF/lib/objectify-4.0b1-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/kryo-2.21-all.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
