Another datastore interim update. It's getting there. Can now add approximate locations to trees during initial persistence. Completed the first bit of chunking trees together and serializing. Stateful jobs with subdivided sub-tasks are tested and working on the production server (for doing things over a period of several days to  conserve quota).

--- a/TreeSpotter/war/WEB-INF/web.xml
+++ b/TreeSpotter/war/WEB-INF/web.xml
@@ -68,7 +68,7 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>appstats</filter-name>
-		<url-pattern>/treespotter/*</url-pattern>
+		<url-pattern>/treespotter/treedata</url-pattern>
 	</filter-mapping>
 	<servlet>
 		<servlet-name>appstats</servlet-name>
@@ -85,6 +85,14 @@
 	<servlet-mapping>
 		<servlet-name>locationUpdateTask</servlet-name>
 		<url-pattern>/treespotter/tasks/streetblockupdate</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>taskTest</servlet-name>
+		<servlet-class>com.cpsc310.treespotter.server.StreetDataUpdater</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>taskTest</servlet-name>
+		<url-pattern>/treespotter/tasks/tasktest</url-pattern>
 	</servlet-mapping>
 
 </web-app>
