ADDED TEARS OF JOY. TT But yes, CSV download is done.

--- a/TreeSpotter/war/WEB-INF/web.xml
+++ b/TreeSpotter/war/WEB-INF/web.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?><web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.5" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee                http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
 	<!-- Servlets -->
+	
+	<servlet>
+		<servlet-name>exportCSV</servlet-name>
+		<servlet-class>com.cpsc310.treespotter.server.ExportCSV</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>exportCSV</servlet-name>
+		<url-pattern>/treespotter/export</url-pattern>
+	</servlet-mapping>
 	<servlet>
 		<servlet-name>loginService</servlet-name>
 		<servlet-class>com.cpsc310.treespotter.server.LoginServiceImpl</servlet-class>
