Tree persistence appears to be totally functional now. There's still too much data to fit on the dev server, but it fits within quota on the production server, indexable by all the same things as now, with working substring searches on all fields, woohoo! (I've been working on this for too long) Next comes tuning memory  usage and re-hooking up all the queries to the new data.

--- a/TreeSpotter/war/WEB-INF/web.xml
+++ b/TreeSpotter/war/WEB-INF/web.xml
@@ -72,7 +72,7 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>appstats</filter-name>
-		<url-pattern>/treespotter/*</url-pattern>
+		<url-pattern>/treespotter/treedata</url-pattern>
 	</filter-mapping>
 	<servlet>
 		<servlet-name>appstats</servlet-name>
